unpackaged/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>External Project, often in the energy sector, that is the source of one or more Leads and Opportuntities</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>