unpackaged/main/default/objects/Project__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used for retention purposes, indicates record is under review or prioritized</description>
    <inlineHelpText>Indicates whether this record is Active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>