unpackaged/main/default/objects/Project__c/fields/Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to relate Projects to Campaigns for reporting</description>
    <inlineHelpText>Select Campaign related to this Project</inlineHelpText>
    <label>Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>