unpackaged/main/default/objects/Project__c/fields/Corporate_Owner__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Corporate entity that owns the project</description>
    <inlineHelpText>Corporate entity that owns the project, e.g. "Shell"</inlineHelpText>
    <label>Corporate Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Owner)</relationshipLabel>
    <relationshipName>Project_Owners</relationshipName>
    <type>Lookup</type>
</CustomField>