unpackaged/main/default/objects/Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Project</description>
    <inlineHelpText>Description of the Project</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>