unpackaged/main/default/objects/Project__c/fields/EPC__c.field-meta.xml
<CustomField>
    <fullName>EPC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Company performing Engineering, Procurement and Construction</description>
    <inlineHelpText>Company performing Engineering, Procurement and Construction</inlineHelpText>
    <label>EPC</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (EPC)</relationshipLabel>
    <relationshipName>Project_EPCs</relationshipName>
    <type>Lookup</type>
</CustomField>