unpackaged/main/default/objects/Project__c/fields/General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>General Contractor for this Project</description>
    <inlineHelpText>General Contractor for this Project</inlineHelpText>
    <label>General Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (General Contractor)</relationshipLabel>
    <relationshipName>Project_GCs</relationshipName>
    <type>Lookup</type>
</CustomField>