unpackaged/main/default/objects/Project__c/fields/Location_City__c.field-meta.xml
<CustomField>
    <fullName>Location_City__c</fullName>
    <description>City where the Project Site is located.</description>
    <inlineHelpText>City where the Project Site is located. Populates Site City on all Leads/Opportunities related to this project.</inlineHelpText>
    <label>Site City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>