unpackaged/main/default/objects/Project__c/fields/Location_Prov_State__c.field-meta.xml
<CustomField>
    <fullName>Location_Prov_State__c</fullName>
    <description>Prov/State where the Project Site is located.</description>
    <inlineHelpText>Province/State where the Project Site is located. Populates Site Prov/State on all Leads/Opportunities related to this project.</inlineHelpText>
    <label>Site Province/State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Province_State</valueSetName>
    </valueSet>
</CustomField>