unpackaged/main/default/objects/Project__c/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Overarching Project that this Site Specific Project is under</description>
    <inlineHelpText>Overarching Project that this Site Specific Project is under</inlineHelpText>
    <label>Parent Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Child Projects</relationshipLabel>
    <relationshipName>Parent_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>