unpackaged/main/default/objects/Project__c/fields/Product_Quantity_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Quantity_Type__c</fullName>
    <description>How many and what type of BD product(s) would be needed for this project?</description>
    <inlineHelpText>How many and what type of BD product(s) would be needed for this project?</inlineHelpText>
    <label>Product Quantity/Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>