unpackaged/main/default/objects/Project__c/fields/Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase__c</fullName>
    <description>Phase in a Project's lifecycle, taken from IIR database</description>
    <inlineHelpText>Phase in a Project's lifecycle</inlineHelpText>
    <label>Project Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Feasibility</fullName>
            </value>
            <value>
                <fullName>FERC</fullName>
            </value>
            <value>
                <fullName>FID</fullName>
            </value>
            <value>
                <fullName>Project Sanctioned</fullName>
            </value>
            <value>
                <fullName>Tenders Issued</fullName>
            </value>
            <value>
                <fullName>Contract Awarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>