unpackaged/main/default/objects/Project__c/fields/Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Start_Date__c</fullName>
    <description>Date the Project is scheduled to start/started</description>
    <inlineHelpText>Date the Project is scheduled to start/started</inlineHelpText>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>