unpackaged/main/default/objects/Project__c/fields/Project_Status_del__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_del__c</fullName>
    <description>Status of Project</description>
    <inlineHelpText>Status of Project</inlineHelpText>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Unconfirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>