unpackaged/main/default/objects/Project__c/fields/Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Project_Value__c</fullName>
    <description>Project's total value</description>
    <inlineHelpText>Project's total value</inlineHelpText>
    <label>Project Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>