unpackaged/main/default/objects/Project__c/fields/Project_Value_Abbr__c.field-meta.xml
<CustomField>
    <fullName>Project_Value_Abbr__c</fullName>
    <description>Abbrev of Project Value</description>
    <formula>IF( Project_Value__c &gt; 1000000000,
   TEXT(ROUND(Project_Value__c/1000000000,1)) + 'B'
   ,
   IF(Project_Value__c &gt; 1000000,
   TEXT(ROUND(Project_Value__c/1000000,1)) + 'M',
     if(
      Project_Value__c &gt; 1000
      ,
      TEXT(ROUND(Project_Value__c/1000,1)) + 'K'
      ,
      TEXT(Project_Value__c)
   )
))</formula>
    <inlineHelpText>Abbrev of Project Value</inlineHelpText>
    <label>Project Value (Abbr)</label>
    <type>Text</type>
</CustomField>