unpackaged/main/default/objects/Project__c/fields/Site_Country__c.field-meta.xml
<CustomField>
    <fullName>Site_Country__c</fullName>
    <description>Country where the Project Site is located.</description>
    <inlineHelpText>Country where the Project Site is located. Populates Site Country on all Leads/Opportunities related to this project.</inlineHelpText>
    <label>Site Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>