unpackaged/main/default/objects/Project__c/fields/Site_Postal_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Postal_Zip_Code__c</fullName>
    <description>Postal/Zip Code of Project Site address.</description>
    <inlineHelpText>Postal/Zip Code of Project Site address. Populates Site Postal/Zip Code on all Leads/Opportunities related to this project.</inlineHelpText>
    <label>Site Postal/Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>