unpackaged/main/default/objects/Project__c/fields/Site_Street__c.field-meta.xml
<CustomField>
    <fullName>Site_Street__c</fullName>
    <description>Street address of Project Site.</description>
    <inlineHelpText>Street address of Project Site. Populates Site Street on all Leads/Opportunities related to this project.</inlineHelpText>
    <label>Site Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>