unpackaged/main/default/objects/Project__c/listViews/Active_US_Gulf_Coast_Major_Projects.listView-meta.xml
<ListView>
    <fullName>Active_US_Gulf_Coast_Major_Projects</fullName>
    <columns>NAME</columns>
    <columns>Parent_Project__c</columns>
    <columns>Corporate_Owner__c</columns>
    <columns>EPC__c</columns>
    <columns>General_Contractor__c</columns>
    <columns>Project_Value_Abbr__c</columns>
    <columns>Location_City__c</columns>
    <columns>Location_Prov_State__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Priority__c</columns>
    <columns>Product_Quantity_Type__c</columns>
    <columns>Project_Phase__c</columns>
    <columns>Project_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Campaign_Source__c</field>
        <operation>equals</operation>
        <value>US Gulf Coast Major Projects</value>
    </filters>
    <label>Active US Gulf Coast Major Projects</label>
</ListView>