unpackaged/main/default/objects/Project__c/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <columns>NAME</columns>
    <columns>Corporate_Owner__c</columns>
    <columns>General_Contractor__c</columns>
    <columns>Location_City__c</columns>
    <columns>Location_Prov_State__c</columns>
    <columns>Site_Country__c</columns>
    <columns>Product_Quantity_Type__c</columns>
    <columns>Project_Phase__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Project_Value_Abbr__c</columns>
    <columns>Priority__c</columns>
    <columns>Campaign_Source__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Projects</label>
</ListView>