unpackaged/main/default/objects/Project__c/listViews/My_Projects.listView-meta.xml
<ListView>
    <fullName>My_Projects</fullName>
    <columns>NAME</columns>
    <columns>Parent_Project__c</columns>
    <columns>Corporate_Owner__c</columns>
    <columns>EPC__c</columns>
    <columns>General_Contractor__c</columns>
    <columns>Project_Value_Abbr__c</columns>
    <columns>Location_City__c</columns>
    <columns>Location_Prov_State__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Priority__c</columns>
    <columns>Product_Quantity_Type__c</columns>
    <columns>Project_Phase__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Active__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Projects</label>
</ListView>